# time-selector

./: .gitignore  README.md
demo/: Main.hs  app.cabal
demo/app/: all.js  out.frefs.js  out.frefs.json  out.js  out.stats
haskell/: Handler.hs  State.hs  View.hs  default.nix  timeselector.cabal
haskell/TimeSelector/: State.hs  View.hs
react/: package-lock.json  package.json  tsconfig.json  tslint.json
react/src/: index.tsx
react/tests/: index.test.tsx
