name:                app
version:             0.1.0.0
synopsis:            First miso app
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable app
  main-is:             Main.hs
  other-modules:       Poli.Web.Widgets.TimeSelector.View
  ghcjs-options:
    -dedupe
  build-depends:       base, miso
  default-language:    Haskell2010
