name:                timeselector
version:             0.1.0.0
synopsis:            Time Selector Miso Widget
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends:       base, time, text, miso, aeson, lens, containers
  exposed-modules:     View
  other-modules:       State
  default-language:    Haskell2010
