name:                timeselector
version:             0.1.0.0
synopsis:            Time Selector Miso Widget
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends:       base, time, text, miso, aeson, lens, containers
  exposed-modules:     TimeSelector.View
  other-modules:       TimeSelector.State
  default-language:    Haskell2010

executable demo
  main-is:             Demo.hs
  ghcjs-options:       -dedupe
  build-depends:       base, miso, time, text, aeson, lens, containers
  default-language:    Haskell2010
